# srebot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  config.yml.example  debug_regex.py  docker-compose.yml  ignore_rules.yml.example  index.yaml  mcp_servers.yml  mcp_servers.yml.example  pyproject.toml
.github/workflows/: docker-publish.yml  release-charts.yml
deploy/helm/ai-health-bot/: Chart.yaml  values.yaml
deploy/helm/ai-health-bot/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  redis.yaml  secret.yaml  serviceaccount.yaml
deploy/helm/ai-observability-bot/: Chart.yaml  values.yaml
deploy/helm/ai-observability-bot/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  redis.yaml  secret.yaml  serviceaccount.yaml
deploy/helm/srebot/: Chart.yaml  README.md  values.yaml
deploy/helm/srebot/templates/: deployment.yaml  secret.yaml
src/ai_health_bot/: __init__.py  config.py
src/ai_health_bot/bot/: handlers.py  main.py
src/ai_health_bot/llm/: agent.py  prompts.py
src/ai_health_bot/mcp/: mcp_client.py  registry.py  tools.py
src/ai_health_bot/parser/: alert_parser.py  filtering.py
src/ai_health_bot/state/: store.py
src/ai_observability_bot/: config.py
src/ai_observability_bot/bot/: __init__.py  base.py  handlers.py  health.py  main.py  registry.py
src/ai_observability_bot/bot/telegram/: __init__.py  handlers.py  integration.py
src/ai_observability_bot/llm/: agent.py  prompts.py  ws_client.py
src/ai_observability_bot/mcp/: registry.py
src/ai_observability_bot/parser/: filtering.py
src/ai_observability_bot/state/: store.py
src/srebot/: __init__.py  config.py
src/srebot/bot/: __init__.py  base.py  health.py  main.py  registry.py  shared.py
src/srebot/bot/discord/: __init__.py  handlers.py  integration.py
src/srebot/bot/slack/: __init__.py  handlers.py  integration.py
src/srebot/bot/telegram/: __init__.py  handlers.py  html_utils.py  integration.py
src/srebot/llm/: agent.py  ws_client.py
src/srebot/mcp/: mcp_client.py  registry.py
src/srebot/parser/: alert_parser.py  filtering.py
src/srebot/state/: store.py
tests/: conftest.py  test_agent_iterations.py  test_agent_soft_correction.py  test_alert_lifecycle.py  test_alert_parser.py  test_alert_parsing.py  test_bot_registry.py  test_bot_shared.py  test_filtering.py  test_html_utils.py  test_mcp_client.py  test_mcp_processing.py  test_mcp_routing.py  test_slack_integration.py  test_state_store.py  test_telegram_handlers.py
tests/fixtures/: sample_alert.txt  sample_resolved.txt
