[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-health-bot"
version = "0.1.0"
description = "Telegram bot that analyzes Prometheus alerts using LLM and MCP tools"
requires-python = ">=3.12"  # Tested on Python 3.14.3
dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "openai>=1.0",
    "httpx>=0.27",
    "pydantic-settings[yaml]>=2.0",
    "pyyaml>=6.0",
    "redis[hiredis]>=5.0",
    "mcp>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_health_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
]
