[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srebot"
version = "0.1.0"
description = "Telegram bot that analyzes Prometheus alerts using LLM and MCP tools"
requires-python = ">=3.14"  # Proactively migration to 3.14
dependencies = [
    "python-telegram-bot[ext]>=22.7",
    "httpx>=0.28.1",
    "pydantic-settings[yaml]>=2.13.1",
    "pyyaml>=6.0.3",
    "redis[hiredis]>=7.4.0",
    "mcp>=1.26.0",
    "aiohttp>=3.13.5",
    "websockets>=16.0",
    "slack-bolt>=1.27.0",
    "lxml>=6.0.3",
    "markdown>=3.10.2",
    "discord-py>=2.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/srebot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
]
